Fixed button alignment and testing class names

--- a/src/main/webapp/resources/js/pages/projects/linelist/linelist.scss
+++ b/src/main/webapp/resources/js/pages/projects/linelist/linelist.scss
@@ -62,8 +62,9 @@ $bgColor: #f5f7f7;
   }
 }
 
-.table-filter > input.ant-input {
-  margin-top: 3px !important;
+.table-filter,
+.tour-button {
+  margin-top: 4px !important;
 }
 
 // Style the default editor within ag-grid
